* Changelog

** Unreleased

*** Added:
  - Hint how to complete email addresses.
  - Package =web-mode=.
  - Keybinding =M-s M-s= for ~M-x isearch-forward-thing-at-point~.
  - More abbrevs to ~init-abbrevs.el~
  - Keybinding =f= to open =xref= definition in the same window.

*** Changed:
  - Improve =rust-mode= usability.
  - Improve =php-mode= usability.
  - Tweak editing usability.
  - Configure =xref= to use =ripgrep= when it's available.

** v2.0.0 - 2022-04-07

Improved usability of everyday tasks in writing and programming, especially in
regard to:
- emails and mailing lists.
- programming: ELisp, PHP, CSS, HTML, Rust.
- text writing and reading.
- Emacs UI and lifecycle.

*** Added:
  - Additional =PDF= tools.
  - Configure several =PHP= abbreviations (templates).
  - /Language Server Protocol/ (LSP) client =eglot=.
  - Enable =company-mode= completions.
  - =ELisp= configuration file.
  - Auto-mode for =XML= and =YAML=.
  - =diff-hl= package to mark changed hunks (under =git=) on the fringe.
  - ~examples/local-pre-init.el~ file.
  - Open configured files on Emacs load without =desktop-save-mode= state.
  - Command to exit =Emacs= and reset =desktop-save-mode= state.
  - Confirm before killing non-empty =*scratch*= buffer.
  - Keybinding to toggle =scroll-lock-mode=.
  - Auto-insert closing /parenthesis/.
  - Configure =Gnus= as a mailing lists reader.
  - Enable =GNU-devel ELPA= packages repository.
  - Query =GnuPG Pinentry= passphrase through the Emacs minibuffer.
  - Install =debbugs= package.
  - Mac OS: files removed by =Finder=, hence with "Put Back" feature enabled.
  - Enable =Rmail= email client.
  - Load OS specific /font/.
  - Configured to use four spaces for /indentation/.
  - Show column number in the /mode line/.
  - Advanced whitespaces visualization.
  - Support /optional local file/ loaded in the end of the initialization.
  - Highlight =Rust= and =PHP= programming languages syntax.
  - Add =rust-mode= key bindings.